# CodeOnTheGo

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  ARCHITECTURE.md  BUILDING_ON_MACOS.md  BUILD_NEW_AAR.md  BUILD_OPTIMIZATION_ANALYSIS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERT_PLUGIN_TO_LIBRARY_PRESENTATION.md  CROWDIN_CONTRIBUTORS.md  E2E_TESTING_REPORT.md  EMBEDDING_MODEL_FIX.md  FeedbackManagerUsageExample.kt  LLAMA_CRASH_DIAGNOSTICS.md  MACOS_ARM64_REALITY.md  MERMAID_DIAGRAMS_COLLECTION.md  NATIVE_MACOS_PORT_ANALYSIS.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_INTEGRATION_GUIDE.md  PRESENTATION_QUICK_GUIDE.md  QUESTIONS.md  README-presentation.md  README.md  REVIEW.md  SECURITY.md  STATUS.md  TEST_EMBEDDING_MODEL.md  TEST_SUITE.md  build.gradle.kts  deduplicate_with_links.py  diagram-slide3.html  fresh-logs.txt  gradle.properties  gradlew  (+12 more)
.claude/: .gitignore  settings.local.json
.githooks/: hook  pre-commit
actions/: build.gradle.kts
agent/: build.gradle.kts
ai-assistant-plugin/: build.gradle.kts
ai-code-helper-plugin/: build.gradle.kts  proguard-rules.pro
ai-core-plugin/: build.gradle.kts  proguard-rules.pro
annotation-processors/: build.gradle.kts
annotation-processors-ksp/: build.gradle.kts
apk-viewer-plugin/: README.md  build.gradle.kts  settings.gradle.kts
app/: .gitignore  build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp
assets/: core.cgt  documentation.db
build-info/: build.gradle.kts
common/: build.gradle.kts
common-ui/: build.gradle.kts
compose-preview/: build.gradle.kts
constants/: build.gradle.kts
cv-image-to-xml/: build.gradle.kts  settings.gradle
diagram-pngs/: slide10.mmd  slide14.mmd  slide15.mmd  slide17.mmd  slide3.mmd  slide5.mmd  slide6.mmd  slide9.mmd
docs/: INLINE_SUGGESTIONS.md  LLM_ADB_COMMANDS.md  PLUGIN_AUTHORING.md  SPANISH_VOICE_SUPPORT.md  VOICE_CODE_INTEGRATION.md  gemma3_phase1.md  plugin-api.md
docs/adr/: README.md  (+11 more)
editor/: build.gradle.kts
editor-api/: build.gradle.kts
editor-treesitter/: build.gradle.kts
eventbus-android/: build.gradle.kts
eventbus-events/: build.gradle.kts
fastlane/: README.md
floating-window/: build.gradle.kts
forms-plugin/: .gitignore  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
gis-plugin/: .gitignore  build.gradle.kts  settings.gradle.kts
git-core/: build.gradle.kts
gradle/: libs.versions.toml
gradle-plugin/: build.gradle.kts
gradle-plugin-config/: build.gradle.kts
idetooltips/: README.md  build.gradle.kts
keystore-generator-plugin/: build.gradle.kts  settings.gradle.kts
layouteditor/: build.gradle.kts
layouteditor-module/: build.gradle.kts
lexers/: build.gradle.kts
libs_source/: documentation.db  gradle-api-8.7.jar.br  idesetup1.sh  manifest.json
llama/: build.gradle.kts
llama-api/: build.gradle.kts
llama-impl/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  llama-android.cpp
logger/: build.gradle.kts
logsender/: build.gradle.kts
logsender-sample/: build.gradle.kts
lookup/: build.gradle.kts
markdown-preview-plugin/: build.gradle.kts  settings.gradle.kts
plugin-api/: build.gradle.kts  settings.gradle.kts
plugin-api-java/: build.gradle.kts
plugin-manager/: build.gradle.kts
preferences/: build.gradle.kts
profiler/: build.gradle.kts
quick-build/: README.md  build.gradle.kts
quickbuild-daemon/: build.gradle.kts
(+4156 files in other folders)
